Doggos names overwriting the placeholders

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <div class="lista">
         <ul>
             <li>
-                <div>
-                    <img src="./assets/dog1.jpg" class="pics" alt="Cachorro">
-                    <p class="info">
+                <div class="sided">
+                    <img src="./assets/dog1.jpg" class="pics" alt="Akise">
+                    <a class="info">
                         Dog 1
-                    </p>
+                    </a>
                 </div>
             </li>
             <li>
-                <div>
-                    <img src="./assets/dog2.jpg" class="pics" alt="Cachorro">
-                    <p class="info">
+                <div class="sided">
+                    <img src="./assets/dog2.jpg" class="pics" alt="Senkaku">
+                    <a class="info">
                         Dog 2
-                    </p>
+                    </a>
                 </div>
             </li>
             <li>
-                <div>
-                    <img src="./assets/dog3.jpg" class="pics" alt="Cachorro">
-                    <p class="info">
+                <div class="sided">
+                    <img src="./assets/dog3.jpg" class="pics" alt="Seiji Menasu">
+                    <a class="info">
                         Dog 3
-                    </p>
+                    </a>
                 </div>
                 
             </li>
