New branch added, dogs info and Contacts added

--- a/index.html
+++ b/index.html
@@ -13,25 +13,34 @@
         <ul>
             <li>
                 <div class="sided">
-                    <img src="./assets/dog1.jpg" class="pics" alt="Akise">
+                    <img src="./assets/dog1.jpg" class="pics" alt="Akise" title="I'm Akise! Let's play together!">
                     <a class="info">
                         Dog 1
                     </a>
-                </div>
-            </li>
-            <li>
-                <div class="sided">
-                    <img src="./assets/dog2.jpg" class="pics" alt="Senkaku">
-                    <a class="info">
-                        Dog 2
+                    <a class="info" title="Redirect to the official github" href="https://github.com/willianwcr/dotPet/tree/laravel">
+                        Check up on Github!
                     </a>
                 </div>
             </li>
             <li>
                 <div class="sided">
-                    <img src="./assets/dog3.jpg" class="pics" alt="Seiji Menasu">
+                    <img src="./assets/dog2.jpg" class="pics" alt="Senkaku" title="You may call me Sen for short. Adopt me and i will never let you down!">
+                    <a class="info">
+                        Dog 2
+                    </a>
+                    <a class="info" title="Redirect to the official github" href="https://github.com/willianwcr/dotPet/tree/laravel">
+                        Check up on Github!
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div class="sided">
+                    <img src="./assets/dog3.jpg" class="pics" alt="Seiji Menasu" title="Hai there, i'm seiji. Adopt me, please! :D">
                     <a class="info">
                         Dog 3
+                    </a>
+                    <a class="info" title="Redirect to the official github" href="https://github.com/willianwcr/dotPet/tree/laravel">
+                        Check up on Github!
                     </a>
                 </div>
                 
